--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,16 @@
 name = "usbd-ethernet"
 version = "0.1.0"
 edition = "2021"
-
+description = "Communication Device Class Network Control Model (CDC-NCM) class for usb-device"
+license = "MIT"
+repository = "https://github.com/dlkj/usbd-ethernet"
+keywords = ["usb", "usb-device", "network", "ethernet"]
+categories = ["no-std", "embedded", "usb-device"]
+authors = ["Daniel Kenyon-Jones"]
+homepage = "https://github.com/dlkj/usb-ethernet"
 
 [dependencies]
-smoltcp = { version = "0.9.1", default-features = false, features = [
+smoltcp = { version = "0.9", default-features = false, features = [
     "defmt",
     "socket-raw",
     "socket-udp",
@@ -16,6 +22,6 @@ smoltcp = { version = "0.9.1", default-features = false, features = [
     "proto-ipv4",
     "proto-ipv6",
 ] }
-defmt = "0.3.4"
-heapless = { version = "0.7.16", features = ["defmt-impl"] }
-usb-device = { version = "0.2.9", features = ["defmt"] }
+defmt = "0.3"
+heapless = { version = "0.7", features = ["defmt-impl"] }
+usb-device = { version = "0.2", features = ["defmt"] }
