--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "usbd-ethernet"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "Communication Device Class Network Control Model (CDC-NCM) class for usb-device"
 license = "MIT"
@@ -8,7 +8,7 @@ repository = "https://github.com/dlkj/usbd-ethernet"
 keywords = ["usb", "usb-device", "network", "ethernet"]
 categories = ["no-std", "embedded", "usb-device"]
 authors = ["Daniel Kenyon-Jones"]
-homepage = "https://github.com/dlkj/usb-ethernet"
+homepage = "https://github.com/dlkj/usbd-ethernet"
 
 [dependencies]
 smoltcp = { version = "0.9", default-features = false, features = [
