--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,15 @@ authors = ["Daniel Kenyon-Jones"]
 homepage = "https://github.com/dlkj/usbd-ethernet"
 
 [dependencies]
-smoltcp = { version = "0.9", default-features = false, features = [
+smoltcp = { version = "0.11", default-features = false, features = [
     "defmt",
     "proto-ipv4",
     "medium-ethernet",
     "socket-udp",
 ] }
 defmt = { version = "0.3", optional = true }
-heapless = { version = "0.7", features = ["defmt-impl"] }
-usb-device = { version = "0.2", features = ["defmt"] }
+heapless = { version = "0.8", features = ["defmt-03"] }
+usb-device = { version = "0.3", features = ["defmt"] }
 
 [features]
 defmt = ["dep:defmt", "usb-device/defmt"]
