--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Communication Device Class Network Control Model (CDC-NCM) class 
 license = "MIT"
 repository = "https://github.com/dlkj/usbd-ethernet"
 keywords = ["usb", "usb-device", "network", "ethernet"]
-categories = ["no-std", "embedded", "usb-device"]
+categories = ["no-std", "embedded"]
 authors = ["Daniel Kenyon-Jones"]
 homepage = "https://github.com/dlkj/usbd-ethernet"
 
